--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -65,11 +65,13 @@
         <!-- fin de boostrap -->
     </div>
 
+    <div class="game_container">
         <div class="state-container">
-            <div class="black-points"><p>0</p></div>
+            <div class="black-points"><p>Puntos: 65</p></div>
             <div class="turn-state"><p>Turno: Blancas</p></div>
-            <div class="white-points"><p>0</p></div>
+            <div class="white-points"><p>Puntos: 65</p></div>
         </div>
+
         <div class="box-container">
             <div class="fila" id="cero">
                 <div class="box " id="cero">
@@ -396,12 +398,20 @@
                     <p class="marcador">H</p>
                 </div>
                 <div class="box" id="nueve">
-
                 </div>
             </div>
-
         </div>
-    
-    </body>
+    </div>
+    <div class="players_info">
+        <div class="player_info">
+            <div class="player1_Name">Jugador 1</div>
+            <div class="player_movs">Movimientos: 65</div>
+        </div>
+        <div class="player_info">
+            <div class="player2_Name">Jugador 2</div>
+            <div class="player_movs">Movimientos 65</div>
+        </div>
+    </div>
+</body>
 </html>
 <script src="~/Content/JsFiles/Pruebas.js"></script>
