--- a/ProyectoIpc2/Content/css/TableroEstilo.css
+++ b/ProyectoIpc2/Content/css/TableroEstilo.css
@@ -34,7 +34,7 @@
     height: 60px;
     background-color: black;
     float: left;
-    color: gray;
+    color: lightgray;
     text-align: center;
 }
 
@@ -172,7 +172,7 @@
     border-radius: 6px;
 }
 
-.player1_Name {
+.black_Name {
     text-align: center;
     padding-top: 8px;
     border-top-left-radius: 6px;
@@ -182,7 +182,7 @@
     color: whitesmoke;
 }
 
-.player2_Name {
+.white_Name {
     text-align: center;
     padding-top: 8px;
     border-top-left-radius: 6px;
@@ -201,4 +201,58 @@
 
 .box .marcador {
     margin-top: 12px;
+}
+
+.blanca_inicial {
+    background-color: whitesmoke;
+}
+
+.negra_inicial {
+    background-color: black;
+}
+
+.info_option {
+    background-color: #ee4d4b;
+    color: whitesmoke;
+    width: 210px;
+    height: 40px;
+    border: none;
+    border-radius: 6px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.info_option#nombre {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.host_black  {
+    background-color: black;
+    color: whitesmoke;
+}
+
+.host_white {
+    background-color: whitesmoke;
+    color: black;
+}
+
+.nombre_input {
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border: none;
+    margin-left: 20px;
+    width: 210px;
+    height: 40px;
+    background-color: whitesmoke;
+}
+
+.players_info#vsJugador {
+    height: 185px;
+}
+
+.salir {
+    background-color: #d9534f;
+    color: white;
 }
