--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tablero";
+
 
 }
 
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tablero </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Principal </title>
+    <title> Tablero </title>
     <script src="~/Content/JsFiles/Pruebas.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -70,7 +70,7 @@
     <div class="game_container">
         <div class="state-container">
             <div class="black-points"><p>Puntos: 0</p></div>
-            <div class="turn-state"><p>Turno: Negro</p></div>
+            <div class="turn-state"><p id="turno">Turno: Negro</p></div>
             <div class="white-points"><p>Puntos: 0</p></div>
         </div>
 
