--- a/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
+++ b/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
@@ -18,8 +18,8 @@
         <button class="option" onclick="vsJugador()">Partida con otro jugador</button>
         <button class="option">Torneo</button>
         <button class="option">Reportes</button>
-        <button class="option">Cerrar sesion</button>
+        <button class="option" onclick="cerrarSesion()">Cerrar sesion</button>
     </div>
 </body>
 </html>
-<script src="~/Content/JsFiles/MenuPrincipal.js"></script>
+<script src="~/Content/JsFiles/MenuPrincipal.js?v=<%=DateTime.Now%>"></script>
