Mejoras al guardar

--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -424,7 +424,7 @@
         </div>
     }
 
-    <script src="~/Content/JsFiles/Pruebas.js"></script>
+    <script src="~/Content/JsFiles/Pruebas.js?v=<%=DateTime.Now%>"></script>
 </body>
 
 </html>
